--- a/Ecos-oraculo/src/index.html
+++ b/Ecos-oraculo/src/index.html
@@ -42,7 +42,7 @@
     />
 
     <!-- Protección contra apertura de consola y herramientas de desarrollador -->
-    <script>
+    <!-- <script>
       // Deshabilitar click derecho
       document.addEventListener("contextmenu", function (e) {
         e.preventDefault();
@@ -248,7 +248,7 @@
         );
       }
     </script>
-
+ -->
     <style>
       /* Deshabilitar selección de texto */
       body {
