--- a/Ecos-oraculo/src/index.html
+++ b/Ecos-oraculo/src/index.html
@@ -16,7 +16,6 @@
       gtag("config", "G-HW2QWG5Z9M");
     </script>
 
-    <script src="https://js.stripe.com/v3/"></script>
     <meta charset="utf-8" />
     <title>Ecos del Oráculo</title>
     <base href="/" />
@@ -26,7 +25,6 @@
     <!-- Google Fonts - Berkshire Swash y Arsenal -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <script src="https://www.paypal.com/sdk/js?client-id=AWvQrZiLVQgkc42j1ck1BIfb02NnVoPil_1RKmxaxLQRdHGh0Dz6GIPLUS1GGaasaIS8eR0zCi1vRNeM&currency=USD"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Arsenal:ital,wght@0,400;0,700;1,400;1,700&family=Berkshire+Swash&family=El+Messiri:wght@400;500;600;700&display=swap"
       rel="stylesheet"
@@ -42,7 +40,7 @@
     />
 
     <!-- Protección contra apertura de consola y herramientas de desarrollador -->
-    <script>
+   <!--  <script>
       // Deshabilitar click derecho
       document.addEventListener("contextmenu", function (e) {
         e.preventDefault();
@@ -247,7 +245,7 @@
           true
         );
       }
-    </script>
+    </script> -->
 
     <style>
       /* Deshabilitar selección de texto */
